# agent-dotfiles

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTEXT.md  Mes-Implementation-Notes.md  Mes-Planning.html  README.md  docker-compose.personal.yml  docker-compose.work.yml  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
config/hermes/: base.yaml  personal.yaml  work.yaml
config/personal/: env.example
config/work/: env.example
scripts/: check-work-safe.sh  smoke-personal.sh  smoke-work.sh
services/hermes/: Dockerfile  requirements.txt
services/mock_model/: __init__.py  app.py  requirements.txt
tests/: test_ci_contract.py  test_compose_contract.py  test_config_contract.py  test_mock_model.py  test_repository_contract.py  test_scripts_contract.py
